--- a/libft/Makefile
+++ b/libft/Makefile
@@ -20,6 +20,7 @@ FILES = ft_strlen \
 		ft_isdigit \
 		ft_strndup \
 		ft_str_trim_nl \
+		line_digit
 
 SRCS = $(addsuffix .c, $(FILES))
 OBJS = $(addprefix $(OBJDIR)/, $(FILES:=.o))
